--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
-    <link rel="icon" type="image/png" href="{{ '/pageicon.png' | relative_url }}">
+   <link rel="icon" href="{{ '/favicon.ico' | relative_url }}">
   </head>
 
   <body>
